# discogs-etl

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  run.py
scripts/: aws_batch.sh  aws_batch_job_register.sh
src/discogs_etl/: config.py  etl.py  io.py  parser.py  process.py  s3.py  schema.py  utils.py
src/discogs_etl/executor/: lambda.py
